Added activities for tequila, rum, gin, and vodka. Added buttons that take you to each activity in HomeScreen.java

--- a/Beerig_App/app/src/main/AndroidManifest.xml
+++ b/Beerig_App/app/src/main/AndroidManifest.xml
@@ -21,8 +21,24 @@
         <activity
             android:name=".HomeScreen"
             android:screenOrientation="landscape">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.HOME" />
+            </intent-filter>
         </activity>
+        <activity
+            android:name=".TequilaActivity"
+            android:screenOrientation="landscape">
+            <intent-filter>
+                <action android:name="android.intent.action.PICK_ACTIVITY" />
+
+                <category android:name="android.intent.category.APP_BROWSER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".RumActivity" />
+        <activity android:name=".GinActivity" />
+        <activity android:name=".VodkaActivity"></activity>
     </application>
 
 </manifest>
