Added Party Mode activity. Still needs much work.

--- a/Beerig_App/app/src/main/AndroidManifest.xml
+++ b/Beerig_App/app/src/main/AndroidManifest.xml
@@ -38,7 +38,8 @@
         </activity>
         <activity android:name=".RumActivity" />
         <activity android:name=".GinActivity" />
-        <activity android:name=".VodkaActivity"></activity>
+        <activity android:name=".VodkaActivity" />
+        <activity android:name=".PartyModeActivity"></activity>
     </application>
 
 </manifest>
