--- a/Beerig_App/app/src/main/AndroidManifest.xml
+++ b/Beerig_App/app/src/main/AndroidManifest.xml
@@ -49,6 +49,8 @@
         <activity android:name=".GinActivity" />
         <activity android:name=".VodkaActivity" />
         <activity android:name=".PartyModeActivity"></activity>
+        <activity android:name=".DeviceListActivity" android:label="@string/app_name" android:theme="@android:style/Theme.Dialog"></activity>
+        <service android:enabled="true" android:name=".UartService" />
     </application>
 
 </manifest>
