--- a/Beerig_App/app/src/main/AndroidManifest.xml
+++ b/Beerig_App/app/src/main/AndroidManifest.xml
@@ -48,8 +48,8 @@
         <activity android:name=".RumActivity" />
         <activity android:name=".GinActivity" />
         <activity android:name=".VodkaActivity" />
-        <activity android:name=".PartyModeActivity"></activity>
-        <activity android:name=".DeviceListActivity" android:label="@string/app_name" android:theme="@android:style/Theme.Dialog"></activity>
+        <activity android:name=".PartyModeActivity"/>
+        <activity android:name=".DeviceListActivity" android:label="@string/app_name" android:theme="@android:style/Theme.Dialog"/>
         <service android:enabled="true" android:name=".UartService" />
     </application>
 
